--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,6 +14,11 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       WEB_PORT: ${WEB_PORT}
+      EMAIL_FROM: ${EMAIL_FROM}
+      EMAIL_TO: ${EMAIL_TO}
+      EMAIL_TOKEN_ACCESS: ${EMAIL_TOKEN_ACCESS}
+      SMTP_SERVER: ${SMTP_SERVER}
+      SMTP_PORT: ${SMTP_PORT}
     expose:
       - 8000
     depends_on:
@@ -24,7 +29,7 @@ services:
     volumes:
       - ./docker_volumes/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./docker_volumes/dj/static:/home/app/web/static
-      - ./docker_volumes/dj/media:/usr/src/app/media
+      - ./docker_volumes/dj/media:/home/app/web/media
     ports:
       - ${WEB_PORT}:80
     depends_on:
