--- a/docker_volumes/nginx.conf
+++ b/docker_volumes/nginx.conf
@@ -5,16 +5,14 @@ upstream dj_app {
 server {
 
     listen 80;
+    client_max_body_size 5M;
 
     location / {
         proxy_pass http://dj_app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
-    }
 
-    location /static/ {
-        alias /home/app/web/static/;
         expires 30d;
         add_header Cache-Control "public";
         include /etc/nginx/mime.types;
@@ -25,5 +23,13 @@ server {
             application/javascript js;
             application/javascript mjs;
         }
+    }
+
+    location /static/ {
+        alias /home/app/web/static/;
+    }
+
+    location /media/ {
+        alias /home/app/web/media/;
     }
 }
