--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -30,14 +30,14 @@ services:
   nginx:
     image: nginx:1.25-alpine
     volumes:
-      - ./Docker_volumes/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./Docker_volumes/nginx.conf:/etc/nginx/nginx.conf
       - ./Docker_volumes/dj/static:/home/app/web/static
       - ./Docker_volumes/dj/media:/home/app/web/media
     ports:
       - ${WEB_PORT}:80
     depends_on:
       - web
-  
+
   db:
     image: postgres:14.12-alpine3.20
     volumes:
@@ -46,6 +46,6 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-  
+
     expose:
       - 5432
