--- a/docker_volumes/nginx.conf
+++ b/docker_volumes/nginx.conf
@@ -1,24 +1,30 @@
-upstream dj_app {
-    server web:8000;
+events {
+    worker_connections 1024;
 }
 
-server {
-
-    listen 80;
-    client_max_body_size 5M;
-
-    location / {
-        proxy_pass http://dj_app;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+http {
+    include mime.types;
+    upstream dj_app {
+        server web:8000;
     }
 
-    location /static/ {
-        alias /home/app/web/static/;
-    }
+    server {
+        listen 80;
+        client_max_body_size 5M;
 
-    location /media/ {
-        alias /home/app/web/media/;
+        location / {
+            proxy_pass http://dj_app;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
+
+        location /static/ {
+            alias /home/app/web/static/;
+        }
+
+        location /media/ {
+            alias /home/app/web/media/;
+        }
     }
 }
